services/platform/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platform-ingress
  namespace: platform
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: web-blogs.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-blogs
            port:
              number: 8080
